--- a/web/blog/app/views/posts/show.html.erb
+++ b/web/blog/app/views/posts/show.html.erb
@@ -1,18 +1,40 @@
+<p>debug</p>
+<%=debug @post %>
+
 <p>
   <b>Name:</b>
   <%=h @post.name %>
 </p>
+
+<p>to_yaml</p>
+<%= simple_format @post.to_yaml %>
 
 <p>
   <b>Title:</b>
   <%=h @post.title %>
 </p>
 
+<%= [1, 2, 3, 4, 5].inspect %>
+
 <p>
   <b>Content:</b>
   <%=h @post.content %>
 </p>
 
+<p>
+
+  <h2>Commnets</h2>
+  <% @post.comments.each do |c| %>
+    <p>
+      <b>Commenter:</b>
+      <%=h c.commenter %>
+    </p>
+    <p>
+      <b>Comment:</b>
+      <%=h c.body %>
+    </p>
+  <% end %>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Back', posts_path %> |
+<%= link_to 'Manager Comments', post_comments_path(@post) %>
